--- a/R/Figures_and_timing.Rmd
+++ b/R/Figures_and_timing.Rmd
@@ -370,26 +370,57 @@ writeLines(capture.output(sessionInfo()), "sessionInfo.txt")
 
 # Cover suggestion
 ```{r}
-agg <- read.FCS("Data/Preprocessed/aggregate.fcs")
-fsom <- FlowSOM(input = agg,
-                scale = FALSE,
-                colsToUse = c("MHCII", "CD64", "FcERI", "CD161", "Ly-6G", "CD3", "CD19", "CD11c"),
-                seed = 2021,
-                nClus = 8,
-                xdim = 8, ydim = 8)
-saveRDS(fsom, "Figures/fsom_cover.rds")
+fsom <- readRDS("RDS/ fsom.rds")
+
+angle <- -pi/6 
+rotation_matrix <- matrix(c(cos(angle), sin(angle), -sin(angle), cos(angle)), nrow = 2)
+fsom$MST$l <- t(apply(fsom$MST$l, 1, function(x) rotation_matrix %*% x))
 
 p <- PlotStars(fsom, 
-               backgroundValues = fsom$metaclustering, 
-               list_insteadof_ggarrange = TRUE)
+              backgroundValues = fsom$metaclustering, 
+              list_insteadof_ggarrange = TRUE,
+              markers =  c("MHCII", "CD64", "FcERI", "CD161", "Ly-6G", "CD3", "CD19", "CD11c"))
 
-ggpubr::ggarrange(p$tree, 
-                  ggpubr::ggarrange(p$starLegend, p$backgroundLegend,
-                                    ncol = 2, widths = c(3,1)),
-                  nrow = 2, heights = c(3,1))
-ggsave(file = "Figures/fsom_cover.pdf", 
-       width = 216, height = 285, 
-       units = "mm")
+scatter1 <- Plot2DScatters(fsom = fsom,
+                           channelpairs = list(c("CD19", "CD3")), metaclusters = 1, 
+                           density = FALSE, plotFile = NULL, centers = FALSE,
+                           sizePoints = 0.1, sizeBgPoints = 0.1)[[1]] +
+  ggtitle("")
+scatter2 <- Plot2DScatters(fsom = fsom,
+                           channelpairs = list(c("MHCII", "CD11c")), metaclusters = 8, 
+                           density = FALSE, plotFile = NULL, centers = FALSE,
+                           sizePoints = 0.1, sizeBgPoints = 0.1)[[1]] +
+  ggtitle("")
+scatter3 <- Plot2DScatters(fsom = fsom,
+                           channelpairs = list(c("CD3", "CD161")), metaclusters = 3, 
+                           density = FALSE, plotFile = NULL, centers = FALSE,
+                           sizePoints = 0.1, sizeBgPoints = 0.1)[[1]] +
+  ggtitle("")
+
+
+ggpubr::ggarrange(p$tree + 
+                       annotation_custom(ggplotGrob(scatter1),
+                                         xmin = 8.2, ymin = 3.8,
+                                         xmax = 10.5, ymax = 6.3) +
+                       annotation_custom(ggplotGrob(scatter2),
+                                         xmin = 10, ymin = 1.05,
+                                         xmax = 12.3, ymax = 3.55) +
+                       annotation_custom(ggplotGrob(scatter3),
+                                         xmin = 4.2, ymin = -3.5,
+                                         xmax = 6.5, ymax = -1) +
+                       annotate("text", x = 7.5, y = 4, label = "B cells", color = "#F8766D") +
+                       annotate("text", x = 7.1, y = -1.2, label = "T cells", color = "#CD9600") +
+                       annotate("text", x = 7.2, y = -2.8, label = "NK cells", color = "#7CAE00") +
+                       annotate("text", x = 11, y = -1.3, label = "Neutrophils", color = "#00BE67") +
+                       annotate("text", x = 11.1, y = -0.1, label = "Macrophages", color = "#00A9FF") +
+                       annotate("text", x = 9.7, y = 1.2, label = "DCs", color = "#FF61CC"), 
+                   ggpubr::ggarrange(p$starLegend, p$backgroundLegend,
+                                     ncol = 2, widths = c(3,1)),
+                   nrow = 2, heights = c(3,1))
+
+ggplot2::ggsave(file = "~/Desktop/fsom_cover.pdf", 
+      width = 216, height = 285, 
+      units = "mm")
 ```
 
 # Cheat sheet
